--- a/src/components/MovieDetails/MovieDetails.css
+++ b/src/components/MovieDetails/MovieDetails.css
@@ -30,7 +30,6 @@ h4 {
   background: #F0F0ED;
   border-radius: 5px;
   position: relative;
-
 }
 
 .hero {
@@ -55,27 +54,26 @@ h4 {
 }
 
 .details {
-    padding: 190px 0 0 280px;
+  padding: 190px 0 0 280px;
 }
   
   
 .title1 {
-    color: white;
-    font-size: 44px;
-    margin-bottom: 13px;
-    position: relative;
+  color: white;
+  font-size: 44px;
+  margin-bottom: 13px;
+  position: relative;
 }
     
 span {
-    position: absolute;
-    top: 3px;
-    margin-left: 12px;
-    background: #C4AF3D;
-    border-radius: 5px;
-    color: #544C21;
-    font-size: 14px;
-    padding: 0px 4px;
-      
+  position: absolute;
+  top: 3px;
+  margin-left: 12px;
+  background: #C4AF3D;
+  border-radius: 5px;
+  color: #544C21;
+  font-size: 14px;
+  padding: 0px 4px;
 }
 
 .title2 {    
@@ -86,15 +84,12 @@ margin-bottom: 15px;
 }
 
 
-.description {
-  
+.description { 
   bottom: 0px;
-  height: 200px;
+  height:100vh;
   font-size: 16px;
   line-height: 26px;
   color: black;
-
-  
 }
 
 .column1 {
